# socklib

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  premake5.lua
.github/workflows/: build-with-cmake.yml  build-with-premake.yml  build.yml
include/socklib/: Platform.h  Socket.h  platform.h  socket.h
socklib/src/: Client.cpp  Client.h  Server.cpp  Server.h  Socket.cpp  Socket.h
src/: Socket.cpp
tests/src/: ClientTests.cpp  ServerTests.cpp  SocketTests.cpp  main.cpp
